update mobile header button fixed vertical overflow of button outside header

--- a/src/pages/HomePage/components/MobileMenu.module.css
+++ b/src/pages/HomePage/components/MobileMenu.module.css
@@ -9,10 +9,11 @@
 }
 
 .hamburgerButton {
-    height: 60px;
+    height: 6vh;
     width: 60px;
     border-style: none;
-    
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .hamburgerIcon {
